@@ -6,15 +6,17 @@ public abstract class Hud
 {
   protected double x;
   protected double y;
+  protected int imageSize;
   protected String type;
   protected double movementSpeed;
   protected Sprite sprite;
   
-  public Hud(String ref, int x, int y, String type)
+  public Hud(String ref, int x, int y, String type, int imageSize)
   {
     this.sprite = SpriteStore.get().getSprite(ref);
     this.x = x;
     this.y = y;
+    this.imageSize = imageSize;
     this.type = type;
   }
   
@@ -52,7 +54,10 @@ public abstract class Hud
   {
     return (int)this.y;
   }
-  
+  public int getImageSize()
+  {
+    return (int)this.imageSize;
+  }
   public void changeFrame(int frameNumber) {}
   
   public String getType()
