@@ -1,3 +1,5 @@
+20131110 - Added crafting menu when C pressed
+20131110 - Player will now be drawn behind objects
 20131109 - Added inventory items
 20131108 - Fixed missing Ground on edge of screen
 20131107 - Added Inventory menu when I pressed
